rnsc/test_data/rns_integration/error/parser/type_hints/int/float.rns
.class @int 3.14
.super java/lang/Object
